remove console.log

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,11 @@
+- 緊急: web:build: ../apps/memo/src/components/TextEditor/ForwardRefEditor.tsx:4:21
+web:build: Type error: Cannot find module 'next/dynamic' or its corresponding type declarations.
+
 - 全般: eslint, prettier, test, storybook, husky + lint-staged etc.
 - 全般: workspace export側のエイリアス設定
 - 全般: リリースワークフロー修正
 
 - media-converter: 前回の選択と拡張子が異なる場合はリセットする
+- media-converter: ローディング
 
 - react-hook-form: Attempted import error: 'useController' is not exported from 'react-hook-form' (imported as 'n').
