--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
+- [] eslint error
+
 - 全般: eslint, prettier, test, storybook, husky + lint-staged etc.
 - 全般: workspace export側のエイリアス設定
-- 全般: リリースワークフロー修正
 
 - media-converter: 前回の選択と拡張子が異なる場合はリセットする
 - media-converter: ローディング
