fix: web eslint error

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,4 @@
-- [] eslint error
-
-- 全般: eslint, prettier, test, storybook, husky + lint-staged etc.
+- 全般: prettier, test, storybook, husky + lint-staged etc.
 - 全般: workspace export側のエイリアス設定
 
 - media-converter: 前回の選択と拡張子が異なる場合はリセットする
